@@ -4,6 +4,7 @@ rpostgisLT 0.3 (Release date: )
 Changes:
 
 * Added pgTrajVacuum(), pgTrajDrop()
+* Added ltraj2pgtraj(overwrite = TRUE/FALSE)
 
 Breaking changes:
 
